+ Added: [Suggestion] Don't spawn task for eco, if upkeep, taxes, nations upkeep are disabled
- Fixed: [#2234] Error because of missing level requirement
- Fixed: [#2239] Error at tab completion when edit land = null